--- a/style.css
+++ b/style.css
@@ -38,10 +38,11 @@ li {
   flex-direction: row;
   justify-content: space-between;
   margin: 10px;
+  align-content: center;
 }
 
-.rating {
-  align-self: flex-end;
+.bookmark-expand > .desc {
+  width: 100%;
 }
 
 #display-form, form > button {
