--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ li > button {
   width: 100%;
 }
 
-#display-form, form > button {
+.display-form, form > button {
   color: white;
   background: black;
 }
@@ -66,7 +66,7 @@ li > button {
   opacity: 0;
 }
 
-#display-form {
+.display-form {
   display: block;
   width: 90%;
   height: 50px;
@@ -74,13 +74,13 @@ li > button {
   margin: 0 auto;
 }
 
-#delete {
+.delete {
   align-self: flex-end;
   color: black;
   padding-top: 2px
 }
 
-#bookmark-form {
+.bookmark-form {
   border: 2px solid black;
   margin: 12px; 
   padding: 4px;
@@ -139,11 +139,11 @@ form > button {
     margin-left: 5px;
   }
 
-  #display-form {
+  .display-form {
     width: 60%;
   }
 
-  #bookmark-form {
+  .bookmark-form {
     width: 60%;
     margin: 0 auto; 
   }
